--- a/src/main/java/com/mycompany/quanlykhoahoc/UI/OnsiteCourseAddForm.form
+++ b/src/main/java/com/mycompany/quanlykhoahoc/UI/OnsiteCourseAddForm.form
@@ -239,7 +239,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Add New Onsite Course"/>
+            <Property name="text" type="java.lang.String" value="Add"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton_Add_MouseClicked"/>
