--- a/src/main/java/com/mycompany/quanlykhoahoc/UI/TeacherEditForm.form
+++ b/src/main/java/com/mycompany/quanlykhoahoc/UI/TeacherEditForm.form
@@ -189,7 +189,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Verdana" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Edit Teacher Info"/>
+            <Property name="text" type="java.lang.String" value="Edit"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_Edit_ActionPerformed"/>
